proxy/envoy.json
{
  "listeners": [
  {
    "address": "tcp://0.0.0.0:10000",
    "filters": [
    {
      "type": "both",
      "name": "http_connection_manager",
      "config": {
        "codec_type": "http1",
        "access_log": [
        {
          "path": "/dev/null",
          "filter" : {
            "type": "logical_or",
            "filters": [
              {
                "type": "status_code",
                "op": ">=",
                "value": 500
              },
              {
                "type": "duration",
                "op": ">=",
                "value": 1000000
              }
            ]
          }
        },
        {
          "path": "/dev/null"
        }],
        "stat_prefix": "router",
        "route_config": {
          "virtual_hosts": [
            {
              "name": "integration",
              "domains": [ "*" ],
              "routes": [
                {
                  "prefix": "/",
                  "cluster": "cluster_1"
                }
              ]
            }
          ]
        },

        "filters": [
          {
            "type": "both",
            "name": "grpc_json_transcoder",
            "config": {
              "proto_descriptor": "/etc/proto.pb",
              "services": ["models.AuthService"]
            }
          },
          {
            "type": "both",
            "name": "grpc_json_transcoder",
            "config": {
              "proto_descriptor": "/etc/hello-service.pb",
              "services": ["models.HelloService"]
            }
          },
          { "type": "decoder", "name": "router", "config": {} }
        ]
      }
    }]
  }],

  "admin": { "access_log_path": "/dev/null", "address": "tcp://0.0.0.0:9000" },
  "statsd_udp_ip_address": "0.0.0.0:8125",

  "cluster_manager": {
    "clusters": [
    {
      "name": "cluster_1",
      "features": "http2",
      "connect_timeout_ms": 5000,
      "type": "strict_dns",
      "lb_type": "round_robin",
      "hosts": [
        {
          "url": "tcp://svc:50051"
        },
        {
          "url": "tcp://hello-svc:50052"
        }
      ]
    }]
  }
}
